# Forest-Fire-Prevention

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: CMakeLists.txt  console.c  console.h  fire-sim.c  fire-sim.h  functions.c  functions.h  input.c  input.h  main.c  output.c  probability.c  probability.h  readoutput.c  vector-math.c  vector-math.h  wind.c  wind.h
test/: test.c
